<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PlayerInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/pla_inf_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:title="@string/player_inf_toolbar_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/pla_inf_tag"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/player_inf_tag"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pla_inf_toolbar"/>

        <TextView
            android:id="@+id/pla_inf_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/player_inf_name"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pla_inf_tag"/>

        <TextView
            android:id="@+id/pla_inf_town_hall_lvl"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/player_inf_town_hall_lvl"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pla_inf_name"/>

        <TextView
            android:id="@+id/pla_inf_exp_lvl"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/player_info_exp_lvl"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pla_inf_town_hall_lvl"/>

        <TextView
            android:id="@+id/pla_inf_trophies"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/player_info_trophies"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pla_inf_exp_lvl"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>